--- a/nova-app/public/nova/app.css
+++ b/nova-app/public/nova/app.css
@@ -668,6 +668,10 @@ input[type='search']::-webkit-search-cancel-button {
   -webkit-appearance: searchfield-cancel-button;
 }
 
+.search-icon-center {
+  top: 8px;
+}
+
 /* Content
 ---------------------------------------------------------------------------- */
 
@@ -1121,6 +1125,10 @@ input[type='search']::-webkit-search-cancel-button {
 ---------------------------------------------------------------------------- */
 
 .sidebar-link {
+}
+
+.router-link-active {
+  font-weight: 800 !important;
 }
 
 .sidebar-icon {
